--- a/124app/splashscreen.html
+++ b/124app/splashscreen.html
@@ -9,7 +9,7 @@
 <body>
   <div class="splash-container">
     <div class="splash-box">
-      <h1 class="splash-title">language</h1>
+      <h1 class="splash-title">CODEX</h1>
       <h2 class="splash-text" id="andee">Llenes</h2>
       <h2 class="splash-text" id="gab">Magdugo</h2>
       <h2 class="splash-text" id="mon">Retuya</h2>
